Implementación de creación de anuncios con subida de imágenes
-Modificación del controlador de anuncios (anuncioController.ts):
Se actualizó la función createAnuncio para manejar la subida de imágenes.

-Actualización de las rutas de anuncios (anuncioRoutes.ts):
Se configuró el middleware de Multer para la subida de imágenes.
Se actualizaron las rutas para incluir el middleware de autenticación y el middleware de Multer.

-Configuración de Multer (multerConfig.ts):
Se configuró Multer para manejar la subida de archivos.
Se definió la lógica para nombrar y almacenar los archivos subidos.

-Implementación de la lógica de procesamiento de imágenes (upload.ts):
Se utilizó Sharp para redimensionar y optimizar las imágenes subidas.

-Actualización de las pruebas (anuncioController.test.ts):

Se actualizaron las pruebas existentes.

-Configuración de Swagger:

Se actualizó el archivo swagger.json para incluir la nueva ruta de creación de anuncios con subida de imágenes.
