# src/routes/anuncioRoutes.ts
@@ -1,7 +1,6 @@
 import express from 'express';
 import {
   getAnuncios,
-  uploadImages,
   getAnunciosUsuario,
 	getAnuncio,
   deleteAnuncio,
@@ -9,15 +8,16 @@ import {
 } from '../controllers/anuncioController';
 import multer from 'multer';
 import jwtAuthMiddleware from '../middleware/jwtAuth';
+import { uploadImages } from '../middleware/upload';
+import upload from '../middleware/multerConfig';
 
 const router = express.Router();
-const upload = multer({ storage: multer.memoryStorage() });
+
 
 router.get('/', getAnuncios);
 router.get('/user/:nombreUsuario', getAnunciosUsuario);
 router.get('/item/:slug', getAnuncio);
 router.delete('/delete/:anuncioId', jwtAuthMiddleware, deleteAnuncio);
-router.post('/item', jwtAuthMiddleware, createAnuncio);
-router.post('/upload', upload.array('imagenes'), uploadImages);
+router.post('/item', jwtAuthMiddleware, upload.single('imagen'), createAnuncio);
 
 export default router;
